# models

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  demo.py  horizon_detection.py  main.py  requirements-dev.txt  view_video.py
computer_vision/: README.md
computer_vision/inception/: README.md
computer_vision/inception/burn/: Cargo.toml  README.md  pyproject.toml
computer_vision/inception/burn/src/: dataset.rs  main.rs  model.rs
computer_vision/inception/jax/: dataset.py  inception.py  inception_cifar10_jax.pkl  main.py  pyproject.toml  train.py
computer_vision/inception/torch/: dataset.py  inception.py  main.py  pyproject.toml  train.py
computer_vision/object_detection/: README.md  config.py  demo.py  main.py  motion_detection.py  pyproject.toml  tracking_system.py  video_processor.py  view_video.py  visualization.py
computer_vision/object_detection/documentation_and_roadmap/: 12_algorithm_research.md  CLAUDE.md  development_plan.md
computer_vision/object_detection/documentation_and_roadmap/hardware/: CLAUDE.md  Hardware_Selection_PRD.md  PRD.md  requirements.md
computer_vision/object_detection/documentation_and_roadmap/hardware/hardware_selection_deliverables/: 01_component_comparison_matrix.md  02_cost_analysis_and_budget.md  03_final_system_recommendations.md  04_vendor_analysis_and_sourcing.md  05_implementation_guidelines.md  README.md
computer_vision/yolox/: Cargo.toml  README.md
diffusion/: README.md  pyproject.toml  test_animate_diff.py  test_requirements.txt  test_stable_diffusion.py
diffusion/ddpm/: README.md  README_RAY.md  kuberay-config.yaml  pyproject.toml  run_jax_unet.py  run_lit_unet.py  run_ray_inference.py  run_torch_unet.py
diffusion/ddpm/utils/: dataloader.py  fashion_mnist_dataloader.py  logger.py
diffusion/ddpm/utils_jax/: checkpoint_utils.py  classes.py  diffusion.py  metrics.py  tensorboard_logger.py  tpu_utils.py  training.py
diffusion/ddpm/utils_jax/test/: test_unet_variants.py
diffusion/ddpm/utils_torch/: classes.py  diffusion.py  modules.py  training.py  unet.py
diffusion/ddpm/utils_torch/test/: test_torch_models.py
diffusion/ppca/: README.md  pyproject.toml  run.py  run_pca_sampling.py
diffusion/ppca/src/: bidiagonalisation.py  em.py  pure_qr.py  sample_utils.py  svd.py
diffusion/ppca/tests/: __init__.py  test_bidiagonalisation.py  test_em_ppca.py  test_givens_householder.py  test_svd.py
diffusion/scripts/: pyproject.toml
diffusion/self_attention_block/: main.py  pyproject.toml
diffusion/vae/: README.md  pyproject.toml  run.py  test.py  vae.py
diffusion/vae/vae_utils/: __init__.py  model.py  training.py
fixed_income/: PV01_DV01.ipynb  README.md  WTI_DXY_correlation.ipynb
fixed_income/fx_pricer/: PRD_FX_Algebra.md  README.md  algebra_definition.md  fx-pricer.cabal
fixed_income/fx_pricer/app/: Main.hs
fixed_income/fx_pricer/src/FX/Algebra/: Combinators.hs  Contract.hs  Observable.hs
fixed_income/fx_pricer/src/FX/Examples/: Products.hs
fixed_income/fx_pricer/src/FX/Pricing/: BlackScholes.hs  Core.hs  MarketData.hs
fixed_income/fx_pricer/test/: Test.hs
mastery/: README.md
pdevnet/: Dockerfile  README.md  grid_search.py  linux_install.sh  pyproject.toml
pdevnet/src/: attention_development.py  helpers.py  logger.py  models.py  training.py
unet/: run_jax_unet.py  run_lit_unet.py  run_torch_unet.py  unet_jax.py  unet_pytorch.py
unet/models/: unet_20240731.pt
unet/utils/: fashion_mnist_dataloader.py  logger.py
unet/utils_jax/: classes.py  diffusion.py  training.py  unet_jax.py  utils_jax.py
unet/utils_torch/: classes.py  diffusion.py  training.py  unet_pytorch.py
utils/polars_hdf5/: Cargo.toml  main.rs
