[project]
name = "diffusion"
version = "0.1.0"
description = "Mock configuration to run test scripts"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.32.2",
    "torch>=2.6.0",
]

[tool.uv.workspace]
exclude = ["ddpm/", "vae/"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

