[project]
name = "pdevnet"
version = "0.1.0"
description = "Sequence regression and classification networks based on path developments"
requires-python = ">=3.9"
dependencies = [
    "aeon==0.0.0",
    "matplotlib>=3.9.3",
    "numpy<2.0.0",
    "pandas<2.2.3",
    "torch==1.9.0",
    "tqdm>=4.67.1",
]
