[package]
name = "yolox"
version = "0.1.0"
edition = "2024"

[dependencies]
# Note: default-features = false is needed to disable std
burn = { version = "0.18.0", default-features = false, features = ["ndarray"] }
image = { version = "0.24.9", features = ["png", "jpeg"] }
yolox-burn = { git = "https://github.com/tracel-ai/models", package = "yolox-burn", features = ["pretrained"] }
