[project]
name = "ddpm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
jax = [
    "jax[cuda]>=0.5.3",
    "flax>=0.10.5",
    "orbax>=0.1.9",
    "tensorboard>=2.20.0",
]
jax-tpu = [
    "jax[tpu]>=0.5.3",
    "flax>=0.10.5",
    "orbax>=0.1.9",
    "grain>=0.2.0",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.0",
]
torch = [
    "gdown>=5.2.0",
    "einops>=0.8.1",
    "tensorboard>=2.19.0",
    "lightning>=2.5.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
