[project]
name = "probabilistic_principal_component_analysis"
version = "0.1.0"
description = "Apply computational linear algebra methods to generate images"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.8",
]
