[project]
name = "vae"
version = "0.1.0"
description = "Variational Autoencoder implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "rich>=14.0.0",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
