[package]
name = "inception_cifar10"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inception_cifar10"
path = "src/main.rs"

[dependencies]
burn = { version = "0.18", features = ["std", "train", "vision", "dataset", "ndarray"] }
burn-ndarray = { version = "0.18" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"