[project]
name = "inception-torch"
version = "0.1.0"
description = "Implement Inception block in pytorch"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.19.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
		{ index = "pytorch", marker = "sys_platform == 'win32'" }
]
torchvision = [
	{ index = "pytorch", marker = "sys_platform == 'win32'" }
]


